Added authentication and movie integration service

--- a/MovieApplication/Views/Shared/_Layout.cshtml
+++ b/MovieApplication/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -33,6 +35,16 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+
+                    @if (HttpContextAccessor.HttpContext.Request.Cookies["SessionToken"] == null)
+                    {
+                        <li><a asp-area="" asp-controller="User" asp-action="Login">Login</a></li>
+                    }
+                    else
+                    {
+                        <li><a asp-area="" asp-controller="User" asp-action="Logout">Logout</a></li>
+                    }
+                    <li><a asp-area="" asp-controller="User" asp-action="Register">Register</a></li>
                 </ul>
             </div>
         </div>
