--- a/MovieApplication/Views/Home/Index.cshtml
+++ b/MovieApplication/Views/Home/Index.cshtml
@@ -1,94 +1,107 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
+<link href="~/css/movieCard.css" rel="stylesheet" />
+<script src="~/lib/jquery/dist/jquery.js"></script>
 <div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
+    @if (HttpContextAccessor.HttpContext.Request.Cookies["SessionToken"] != null)
+    {
+
+        <div class="container">
+            <div class="row flex-column-reverse flex-md-row">
+                <div id="root" class="col-md-5">
+                    <div class="card">
+                        <div class="card-header">
+                            <img class="card-img" src="https://image.tmdb.org/t/p/w500/nBNZadXqJSdt05SHLqgT0HuC5Gm.jpg" alt="Card image">
+                        </div>
+                        <div class="card-body">
+                            <h1 class="card-title">Interstellar</h1>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-4 metadata">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <p>9.5/10</p>
+                                    </div>
+                                    <div class="col-8 metadata">Adventure. Sci-Fi</div>
+                                </div>
+                            </div>
+                            <p class="card-text">A team of explorers travel through wormhole in space in an attempt to ensure humanity's survival.</p>
+                            <a class="trailer-preview" href="https://youtu.be/ePbKGoIGAXY" target="new">
+                                <i class="fa fa-play" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-7">
+
+                    <div class="form-group">
+
+                        <div class="col-sm-10">
+                            <input placeholder="Choose Search Term" type="text" class="form-control" id="text" name="text">
+                        </div>
+                        <button id="searchButton" type="submit" class="btn btn-primary">Search</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <script>
+
+    $(document).ready(function () {
+        function getResults(result) {
+            return '<div class=\"card\">\r\n ' +
+                '<div class=\"card-header\">\r\n  ' +
+                ' <img style="width:100%" class=\"card-img\" src=\"' + result.poster + '\" alt=\"Card image\">\r\n ' +
+                ' <\/div>\r\n  <div class=\"card-body\">\r\n<h1 class=\"card-title\">' + result.title + '<\/h1>\r\n' +
+                ' <div class=\"container\">\r\n                                <div class=\"row\">\r\n  ' +
+                ' <div class=\"col-4 metadata\">\r\n  ' +
+                ' <i class=\"fa fa-star\" aria-hidden=\"true\"><\/i>\r\n   ' +
+                ' <p><\/p>\r\n                                    <\/div>\r\n    ' +
+                '  <div class=\"col-8 metadata\"><\/div>\r\n     ' +
+                '   <\/div>\r\n                            <\/div>\r\n   ' +
+                ' <p class=\"card-text\">' + result.title + '<\/p>\r\n  ' +
+                '     <a class=\"trailer-preview\" target=\"new\">\r\n   ' +
+                '      <i class=\"fa fa-play\" aria-hidden=\"true\"><\/i>\r\n   ' +
+                '    <\/a>\r\n     ' +
+                '    <\/div>\r\n    ' +
+                '  <\/div>';
+           
+        }
+
+                // Add the page method call as an onclick handler for the div.
+        $("#searchButton").click(function () {
+            var value = $("#text").val();
+            var req = {
+                    test : 'fghfghfh'
+            };
+            console.log(JSON.stringify(req));
+                    $.ajax({
+                        type: "POST",
+                        url: "@Url.Action("Search","Movie")?query=" + value,
+                        dataType: 'json',
+                        contentType: 'application/json',
+                        beforeSend: function (xhr) {
+                            xhr.setRequestHeader("RequestVerificationToken",
+                                $('input:hidden[name="__RequestVerificationToken"]').val());
+                        },
+                        success: function (result) {
+                            console.log(JSON.stringify(result));
+                            var html = getResults(result);
+
+                            $("#root").children().remove();
+                            $("#root").append(html);
+                        }
+                    });
+
+                });
+            });
+        </script>
+
+    }
+    else
+    {
+        <h1>Login to search for a movie</h1>
+    }
 </div>
